--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -285,7 +285,7 @@ header{
 				}
 				span{
 					font-weight: 500;
-					font-size: .8em;
+					font-size: .65em;
 					display: block;
 					text-align: center;
 					font-variant: small-caps;
@@ -350,7 +350,7 @@ header{
 			span{
 
 				font-weight: 500;
-				font-size: .8em;
+				font-size: .65em;
 				display: block;
 				text-align: center;
 				font-variant: small-caps;
@@ -397,7 +397,7 @@ header{
 		}
 		span{
 			font-weight: 500;
-			font-size: .8em;
+			font-size: .65em;
 			display: block;
 			text-align: center;
 			font-variant: small-caps;
@@ -433,7 +433,7 @@ header{
 			color: #FFFFFF;
 			line-height: .8;
 			font-weight: 500;
-			font-size: .8em;
+			font-size: .65em;
 			display: block;
 			text-align: center;
 			font-variant: small-caps;
@@ -468,7 +468,7 @@ header{
 		span{
 			margin: 0 calc(.8em / .65);
 			font-weight: 500;
-			font-size: .8em;
+			font-size: .65em;
 			display: block;
 			text-align: center;
 			font-variant: small-caps;
@@ -782,6 +782,7 @@ header{
 	transform: translateY(-20px);
 	transition: .2s;
 	z-index: 2;
+	// padding-bottom: .4em;
 	.login-menu__submenu-item{
 		border-bottom: 1px solid rgba(0,0,0,.15);
 		padding: 8px 0;
@@ -1440,4 +1441,25 @@ header{
       border-bottom: 2px solid #237BEF;
     }
   }
+}
+
+
+.header .main-nav-right a, .header .main-nav-left a{
+	// padding-bottom: .4em;
+	&:hover{
+		.menu__link-text{
+			color: #237bef;
+		}
+	}
+	.menu__link-text{
+		position: relative;
+		padding-bottom: 4px;
+		font-size: .65em;
+		font-weight: 400;
+		color: #191a39;
+		font-variant: small-caps;
+		text-transform: lowercase;
+		line-height: .9;
+		// padding: 0;
+	}
 }
