--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,3 @@
-
 <footer class="footer" *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
   <div class="footer-inner">
     <div class="top-part">
@@ -62,7 +61,7 @@
           <div class="info-page-item">
               <a href="#"><span>API</span></a>
           </div>
-      </div> -->*ngIf="(breakpointService.breakpoint$ | async) === 'desktop'"
+      </div> -->
       <div class="inside-page-wr">
         <div class="inside-page-item">
           <a href="https://about.exrates.me/support-center" target="blank"><span>Support</span></a>
