--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -54,15 +54,15 @@
             <a href="#"><span>EU License</span></a>
         </div> -->
       </div>
-      <!--
+
       <div class="info-page-wr">
-          <div class="info-page-item">
-              <a href="#"><span>Fees</span></a>
-          </div>
-          <div class="info-page-item">
-              <a href="#"><span>API</span></a>
-          </div>
-      </div> -->
+        <div class="info-page-item">
+          <a href="https://support.exrates.me/article/fees-pairs" target="blank"><span>Fees</span></a>
+        </div>
+        <div class="info-page-item">
+          <a href="https://ex-open-api.firebaseapp.com/" target="blank"><span>API</span></a>
+        </div>
+      </div>
       <div class="inside-page-wr">
         <div class="inside-page-item">
           <a href="https://about.exrates.me/support-center" target="blank"><span>Support</span></a>
