--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -45,10 +45,10 @@
       </div>
       <div class="servise-page-wr">
         <div class="servise-page-item">
-          <a href="https://about.exrates.me/terms-of-use" target="blank"><span>Terms & conditions</span></a>
+          <a href="https://about.exrates.me/terms-of-use" ><span>Terms & conditions</span></a>
         </div>
         <div class="servise-page-item">
-          <a href="https://about.exrates.me/privacy-policy" target="blank"><span>Privacy policy</span></a>
+          <a href="https://about.exrates.me/privacy-policy" ><span>Privacy policy</span></a>
         </div>
         <!-- <div class="servise-page-item">
             <a href="#"><span>EU License</span></a>
@@ -65,16 +65,16 @@
       </div>
       <div class="inside-page-wr">
         <div class="inside-page-item">
-          <a href="https://about.exrates.me/support-center" target="blank"><span>Support</span></a>
+          <a href="https://about.exrates.me/support-center"><span>Support</span></a>
         </div>
         <div class="inside-page-item">
-          <a href="https://about.exrates.me/client-center" target="blank"><span>Contacts</span></a>
+          <a href="https://about.exrates.me/client-center"><span>Contacts</span></a>
         </div>
         <div class="inside-page-item">
-          <a href="https://about.exrates.me/form-listing" target="blank"><span>List IEO</span></a>
+          <a href="https://about.exrates.me/form-listing" ><span>List IEO</span></a>
         </div>
         <div class="inside-page-item">
-          <a href="https://about.exrates.me/become-advisor" target="blank"><span>Become Advisor</span></a>
+          <a href="https://about.exrates.me/become-advisor" ><span>Become Advisor</span></a>
         </div>
       </div>
       <div class="adrr-block">
