fix header links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -84,14 +84,14 @@
 
           <li class="menu__item">
             <ng-container>
-              <a class="menu__link" href="https://about.exrates.me/about-us"  target="_blank">
+              <a class="menu__link" href="https://about.exrates.me/about-us" >
                 <span class="menu__link-text">{{'About us' | translate}}</span>
               </a>
             </ng-container>
           </li>
           <li class="menu__item">
             <ng-container>
-              <a class="menu__link" href="https://about.exrates.me/form-listing"  target="_blank">
+              <a class="menu__link" href="https://about.exrates.me/form-listing" >
                 <span class="menu__link-text">{{'Apply to list' | translate}}</span>
               </a>
             </ng-container>
@@ -106,7 +106,7 @@
           </li>
           <li class="menu__item" routerLinkActive="menu__link--active">
             <ng-container>
-               <a class="menu__link" href="https://about.exrates.me/fiat"  target="_blank">
+               <a class="menu__link" href="https://about.exrates.me/fiat" >
                  <span class="menu__link-text">{{'Fiat' | translate}}</span>
                </a>
             </ng-container>
@@ -396,31 +396,31 @@
           class="menu-mob__link-text">{{'Token sale' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/fiat/" target="_blank"><span
+        <a class="menu-mob__link" href="https://about.exrates.me/fiat/"><span
           class="menu-mob__link-text">{{'Fiat' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/form-listing" target="_blank"><span
+        <a class="menu-mob__link" href="https://about.exrates.me/form-listing" ><span
           class="menu-mob__link-text">{{'Apply to list' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/become-advisor" target="_blank"><span
+        <a class="menu-mob__link" href="https://about.exrates.me/become-advisor" ><span
           class="menu-mob__link-text">{{'Become Advisor' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/support-center"  target="_blank">
+        <a class="menu-mob__link" href="https://about.exrates.me/support-center" >
           <span class="menu-mob__link-text">{{'Support' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/client-center"  target="_blank">
+        <a class="menu-mob__link" href="https://about.exrates.me/client-center">
           <span class="menu-mob__link-text">{{'Contacts' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/terms-of-use"  target="_blank">
+        <a class="menu-mob__link" href="https://about.exrates.me/terms-of-use" >
           <span class="menu-mob__link-text">{{'Terms and Conditions' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/privacy-policy"  target="_blank">
+        <a class="menu-mob__link" href="https://about.exrates.me/privacy-policy" >
           <span class="menu-mob__link-text">{{'Privacy Policy' | translate}}</span>
         </a>
 
