--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -278,7 +278,7 @@
           </td>
           <td class="table__cell">
             <div class="table__date-time">
-              <div>{{item.dateCreation | amFromUtc | amLocal | amDateFormat:"dd"}} {{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
+              <div>{{item.dateCreation | amFromUtc | amLocal | amDateFormat:"dd DD.MM.YYYY"}}</div>
               <div>{{item.dateCreation | amFromUtc | amLocal | amDateFormat:"HH:mm:ss"}}</div>
             </div>
           </td>
