--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -405,7 +405,7 @@
         </a>
 
         <a class="menu-mob__link" href="https://about.exrates.me/become-advisor" ><span
-          class="menu-mob__link-text">{{'Become Advisor' | translate}}</span>
+          class="menu-mob__link-text">{{'Become Ambassador' | translate}}</span>
         </a>
 
         <a class="menu-mob__link" href="https://about.exrates.me/support-center" >
