DEVEX-2430 fixed links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -404,7 +404,7 @@
           class="menu-mob__link-text">{{'Apply to list' | translate}}</span>
         </a>
 
-        <a class="menu-mob__link" href="https://about.exrates.me/become-advisor" ><span
+        <a class="menu-mob__link" href="https://about.exrates.me/become-ambassador/" ><span
           class="menu-mob__link-text">{{'Become Ambassador' | translate}}</span>
         </a>
 
